--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,10 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 # nowcoder
 nowcoder.web.path=http://127.0.0.1:5500
+
+# ??redis
+spring.redis.host=106.52.41.171
+spring.redis.port=6378
+spring.redis.database=0
+spring.redis.username=root
+spring.redis.password=lwz070745.
