--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # nowcoder
 nowcoder.web.path=http://127.0.0.1:5500
 
-# ??redis
+# redis配置
 spring.redis.host=106.52.41.171
 spring.redis.port=6378
 spring.redis.database=0
