--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.4.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.nowcoder</groupId>
+    <groupId>com.lwz</groupId>
     <artifactId>seckill</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>seckill</name>
