--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,8 +10,8 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
-# nowcoder
-nowcoder.web.path=http://127.0.0.1:5500
+# lwz
+lwz.web.path=http://127.0.0.1:5500
 
 # redis配置
 spring.redis.host=106.52.41.171
