--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -13,8 +13,8 @@ spring.datasource.druid.initial-size=50
 spring.datasource.druid.min-idle=50
 spring.datasource.druid.max-active=200
 
-# nowcoder
-nowcoder.web.path=http://106.52.41.171
+# lwz
+lwz.web.path=http://106.52.41.171
 
 # tomcat
 server.tomcat.threads.min-spare=50
