--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,3 +18,12 @@ spring.redis.host=106.52.41.171
 spring.redis.port=6378
 spring.redis.database=0
 spring.redis.password=lwz070745.
+
+#rockertMQ
+rocketmq.name-server = 106.52.41.171:9876
+rocketmq.producer.group=seckill_producer
+
+# ThreadPool 配置线程池
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
