--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -20,3 +20,13 @@ lwz.web.path=http://106.52.41.171
 server.tomcat.threads.min-spare=50
 server.tomcat.threads.max=300
 server.tomcat.accept-count=600
+
+# redis
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6378
+spring.redis.password=lwz070745.
+
+# rocketmq
+rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=seckill_producer
