--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -30,3 +30,8 @@ spring.redis.password=lwz070745.
 # rocketmq
 rocketmq.name-server=127.0.0.1:9876
 rocketmq.producer.group=seckill_producer
+
+# ThreadPool 配置线程池
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
